Enlace de css y nueva carpeta

--- a/Acardemy/indexAcardemy.html
+++ b/Acardemy/indexAcardemy.html
@@ -8,7 +8,7 @@
     <meta name="autor" content="">
     <title>Document</title>
     <link rel="favicon" href="@{/favicon/faviconWhite.jpg}" type="icon/jpg" sizes="334x267">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="indexAcardemy.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <!--Barra de navegacion-->
         <header class="nav">
             <div class="logo">
-                <a class="enlace" href="index.html">
+                <a class="enlace" href="indexAcardemy.html">
                     <ion-icon class="icono" name="school-sharp"></ion-icon>
                     <span class="titulo">Acardemy</span>
                 </a>
