--- a/Acardemy/recuperarAcardemy.html
+++ b/Acardemy/recuperarAcardemy.html
@@ -7,10 +7,10 @@
     <meta name="description" content="">
     <meta name="autor" content="">
     <title>Acardemy - Recuperar</title>
-    <link rel="favicon" href="@{/favicon/faviconWhite.jpg}" type="icon/jpg" sizes="334x267">
+    <link rel="favicon" href="/favicon/faviconWhite.jpg" type="icon/jpg" sizes="334x267">
     <link rel="stylesheet" href="recuperarAcardemy.css">
 </head>
- 
+
 <body>
     <!--Pagina-->
     <div class="pagina">
