--- a/Acardemy/indexAcardemy.html
+++ b/Acardemy/indexAcardemy.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="autor" content="">
     <title>Acardemy</title>
-    <link rel="favicon" href="@{/favicon/faviconWhite.jpg}" type="icon/jpg" sizes="334x267">
+    <link rel="favicon" href="favicon/faviconBlack.jpg" sizes="334x267">
     <link rel="stylesheet" href="indexAcardemy.css">
 </head>
 
@@ -24,15 +24,15 @@
             </div>
             <div class="opciones">
                 <ul class="rutas">
-                    <a class="enlace" href="/index">
+                    <a class="enlace" href="indexAcardemy.html">
                         <li class="inicio">Inicio</li>
                     </a>
                     <div class="espacio"></div>
-                    <a class="enlace" href="/informacion">
+                    <a class="enlace" href="informacion">
                         <li class="informacion">Informacion</li>
                     </a>
                     <div class="espacio"></div>
-                    <a class="enlace" href="/loginUser">
+                    <a class="enlace" href="loginUserAcardemy.html">
                         <li class="login">Inicia Sesion</li>
                     </a>
                 </ul>
@@ -52,24 +52,25 @@
                         algun instituto o de forma autodidacta.------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
                 </div>
                 <div class="foto">
-                    <img class="imagen" th:src="@{/img/#}" alt="foto">
                 </div>
             </section>
-            <button class="btn">Registrarse</button>
+            <a class="enlace" href="registroUserAcardemy.html">
+                <button class="btn">Registrarse</button>
+            </a>
         </div>
         <!--Pie de pagina-->
         <footer class="footer">
             <p class="texto_footer">--------</p>
             <ul class="rutas_footer">
-                <a class="enlace_footer" href="#">
+                <a class="enlace_footer" th:href="@{#}">
                     <li class="">--------------</li>
                 </a>
                 <br>
-                <a class="enlace_footer" href="#">
+                <a class="enlace_footer" th:href="@{#}">
                     <li class="">----------------</li>
                 </a>
                 <br>
-                <a class="enlace_footer" href="#">
+                <a class="enlace_footer" th:href="@{#}">
                     <li class="">---------</li>
                 </a>
             </ul>
@@ -78,7 +79,7 @@
 
     <!--Script-->
     <script>
-        src = "/js/index.js"
+        src = "js/index.js"
     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
