--- a/Acardemy/loginUserAcardemy.html
+++ b/Acardemy/loginUserAcardemy.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="autor" content="">
+    <meta name="description" content="Acardemy es una plataforma de aprendizaje por medio de flashcards para ayudarte a recordar esos temas que mas se te dificultan, esta pagina es la principal de la plataforma">
+    <meta name="autor" content="Julian Cantillo Cortina, Mateo Payares, Luis Goez">
     <title>Acardemy - Ingreso</title>
     <link rel="favicon" href="favicon/faviconBlack.jpg" type="icon/jpg" sizes="334x267">
-    <link rel="stylesheet" href="loginUserAcardemy.css">
+    <link rel="stylesheet" href="#">
 </head>
 
 <body>
